[package]
name = "express402-relayer"
version = "0.0.1"
edition = "2025"
license = "MIT"
description = "Express 402 (E402) is the first relayer middleware designed to optimize transaction throughput and reduce blockchain confirmation delays for #x402 protocol"
readme = "README.md"
homepage = "https://github.com/express402/express402-relayer"
repository = "https://github.com/express402/express402-relayer"
keywords = ["ethereum", "amm", "mev"]
exclude = ["target/*", ".github/*", ".gitignore", "build.rs", "contracts/*"]


[dependencies]
# darkforest
uniswap_v3_math = "0.6.2"

# alloy
alloy = { version = "1.0.25", features = [
  "contract",
  "network",
  "rpc",
  "rpc-types",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp"] }

# Configuration
config = "0.14"

# Tracing and logging
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Misc utilities
arraydeque = "0.5"
rug = "1.24.1"
itertools = "0.14.0"
rayon = "1.11.0"
async-stream = "0.3.6"


[dev-dependencies]
rand = "0.9.2"
tracing-subscriber = "0.3"
criterion = "0.7"
tokio = { version = "1.42", default-features = false, features = [
  "rt-multi-thread",
] }
alloy = { version = "1.0.25", features = ["rpc-client"] }
alloy-provider = { version = "1.0.25", features = ["throttle"] }


[build-dependencies]
serde_json = "1.0"
rayon = "1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = "full"


[[bench]]
name = "uniswap_v2"
harness = false

[[bench]]
name = "uniswap_v3"
harness = false

[[bench]]
name = "erc_4626"
harness = false
